MAPRHADOOP-577: Added --add-opens options to Windows env.cmd for JDK 17+ support